...
        component={ShopListScreen}
        options={buildTabOptions({
          label: 'Stores',
          title: 'Stores',
          iconActive: 'storefront',
          iconInactive: 'storefront-outline',
          testID: 'tab-stores',
          colors,
        })}
      />
      <Tab.Screen
        name="BulkBuy"
        component={BulkBuyHomeScreen}
...
